<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_weight="0"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:background="#f9f9f9"
        android:layout_height="110dp">
        <TextView
            android:id="@+id/tv_home_expedite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:background="#ffffff"
            android:textSize="@dimen/textsize"
            android:layout_margin="0.2dp"
            android:textColor="@color/textcolor"
            android:drawableTop="@drawable/icon_rocket"
            android:text="@string/app_accelerate"
            />
        <TextView
            android:id="@+id/tv_home_software"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:layout_margin="0.2dp"
            android:background="#ffffff"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textcolor"
            android:drawableTop="@drawable/icon_softmgr"
            android:text="@string/app_software"
            />
        <TextView
            android:id="@+id/tv_home_mobliemgr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:layout_margin="0.2dp"
            android:background="#ffffff"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textcolor"
            android:drawableTop="@drawable/icon_phonemgr"
            android:text="@string/app_detection"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0"
        android:weightSum="3"
        android:background="#f9f9f9"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <TextView
            android:id="@+id/tv_home_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:background="#ffffff"
            android:gravity="center"
            android:layout_margin="0.2dp"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textcolor"
            android:drawableTop="@drawable/icon_telmgr"
            android:text="@string/app_message"
            />
        <TextView
            android:id="@+id/tv_home_file"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:layout_margin="0.2dp"
            android:textSize="@dimen/textsize"
            android:background="#ffffff"
            android:textColor="@color/textcolor"
            android:drawableTop="@drawable/icon_filemgr"
            android:text="@string/app_file"
            />
        <TextView
            android:id="@+id/tv_home_clean"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_margin="0.2dp"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textcolor"
            android:drawableTop="@drawable/icon_sdclean"
            android:text="@string/app_clean"
            />
    </LinearLayout>
</LinearLayout>