<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".azsecuer.android.com.Home.activity.SettingActivity">
    <include
        layout="@layout/home_activity_1"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_left"
            android:textSize="@dimen/TV_setting_textsize"
            android:textColor="@color/textcolor"
            android:text="@string/tv_open_text"
            />
        <ToggleButton
            android:id="@+id/iv_setting_open"
            android:layout_width="@dimen/layout_width_setting"
            android:layout_height="@dimen/layout_height_setting"
            android:background="@drawable/check_tbtn"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_right"
            android:textOn=""
            android:textOff=""
            android:checked="false"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_left"
            android:textSize="@dimen/TV_setting_textsize"
            android:textColor="@color/textcolor"
            android:text="@string/tv_autostart_text"
            />
        <ToggleButton
            android:id="@+id/iv_setting_autostart"
            android:layout_width="@dimen/layout_width_setting"
            android:layout_height="@dimen/layout_height_setting"
            android:background="@drawable/check_tbtn"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_right"
            android:textOn=""
            android:textOff=""
            android:checked="false" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_left"
            android:textSize="@dimen/TV_setting_textsize"
            android:textColor="@color/textcolor"
            android:text="@string/tv_aboutus_text"
            />
        <ImageView
            android:id="@+id/iv_setting_aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_right"
            android:src="@drawable/ic_arrows_right"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_left"
            android:textSize="@dimen/TV_setting_textsize"
            android:textColor="@color/textcolor"
            android:text="@string/tv_help_text"
            />
        <ImageView
            android:id="@+id/iv_setting_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_right"
            android:src="@drawable/ic_arrows_right"
            />
    </RelativeLayout>
</LinearLayout>
